--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,9 @@ dependencies {
     //Import user img using glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //Google map
+    implementation 'com.google.android.gms:play-services-maps:18.0.0'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+
 }
