--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -13,12 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
-        <activity
-            android:name=".activities.TrashActivity"
-            android:exported="false" />
-        <activity
-            android:name=".activities.CreateOrShowNoteActivity"
-            android:exported="false" />
+
         <activity
             android:name=".ProfileActivity"
             android:exported="false" />
@@ -58,6 +56,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.CreateOrShowNoteActivity"
+            android:parentActivityName=".activities.MainActivity"
+            android:exported="false"
+/>
+        <activity
+            android:name=".activities.TrashActivity"
+            android:label="@string/trash_label"
+            android:parentActivityName=".activities.MainActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
