--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
+    implementation 'com.firebaseui:firebase-ui-database:6.2.1'
+
+    implementation 'com.orhanobut:dialogplus:1.11@aar'
+
+
 
 
     testImplementation 'junit:junit:4.+'
